# linkmm

./: .geminiignore  .gitignore  AGENTS.md  BUGFIX_NOTES.md  Cargo.toml  IMPLEMENTATION_NOTES.md  Makefile  README.md  flake.nix  io.github.sachesi.linkmm.desktop  linkmm.spec
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  regression_report.yml
.github/workflows/: ci.yml  release-checklist.yml
docs/: IMPLEMENTATION_TASKS.md  architecture.md  compatibility.md  developer-testing.md  security-execution-policy.md  storage-contract.md  user-workflows.md
docs/release/: checklist.md
notes/: plan_steam_redirector_bethesda.md
src/: config.rs  games.rs  lib.rs  main.rs  mods.rs  steam.rs
src/core/: archive.rs  config.rs  deployment.rs  download.rs  download_state.rs  games.rs  generated_outputs.rs  installer.rs  installer_new.rs  io.rs  logger.rs  mods.rs  nexus.rs  nxm.rs  runtime.rs  runtime_scan.rs  steam.rs  tool_adapters.rs  tool_runs.rs  umu.rs  vfs.rs  vfs_cache.rs  workspace.rs
src/core/installer/: archive.rs  extract.rs  fomod.rs  heuristics.rs  install.rs  links.rs  mod.rs  paths.rs  tests.rs  types.rs
src/core/steam/: launch.rs  library.rs  mod.rs  proton.rs
src/ui/: app_state.rs  downloads.rs  drag_autoscroll.rs  library.rs  load_order.rs  logs.rs  mod.rs  mod_list.rs  ordering.rs  settings.rs  setup_wizard.rs  toast.rs  tools.rs  workspace_events.rs  workspace_page.rs
src/ui/setup_wizard/: fomod.rs  mod.rs  page_app_dir.rs  page_game_select.rs  page_nexus.rs  page_welcome.rs
