[package]
name = "linkmm"
version = "0.1.0"
edition = "2024"
description = "Link Mod Manager - A mod manager for Bethesda games"
license = "GPL-3.0-or-later"

[[bin]]
name = "linkmm"
path = "src/main.rs"
required-features = ["ui"]

[features]
default = ["ui"]
ui = ["dep:gtk4", "dep:libadwaita", "dep:glib", "dep:gio"]

[dev-dependencies]
tempfile = "3"

[dependencies]
gtk4 = { version = "0.11", features = ["v4_14"], optional = true }
libadwaita = { version = "0.9", features = ["v1_5"], optional = true }
glib = { version = "0.22", optional = true }
gio = { version = "0.22", features = ["v2_80"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
log = "0.4"
env_logger = "0.11"
ureq = { version = "2", features = ["json"] }
zip = "2"
sevenz-rust2 = "0.20.2"
unrar = "0.5.8"
quick-xml = "0.37"
libloot = "0.29.1"
tar = "0.4"
